<resources>
    <string name="app_name">VitalSignsCheckup</string>
    <string name="contentDescriptionTemperature">Thermometer</string>
    <string name="contentDescriptionHeartRate">Heart</string>
    <string name="contentDescriptionBloodPressure">BloodPressure</string>
    <string name="contentDescriptionStressLevel">Stress</string>

    <string name="MonitorTemperatureTitle">Temperatura</string>
    <string name="MonitorBloodPressureTitle">Presión Sanguínea</string>
    <string name="MonitorStressLevelTitle">Niveles de Estrés</string>
    <string name="MonitorHeartRateTitle">Ritmo Cardíaco</string>

    <string name="WIP">Trabajo en Progreso</string>
    <string name="contentDescriptionBloodPessure">BloodPressure</string>
    <string name="contentDescriptionStress">Stress</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_mi_cuidador">Mis cuidadores</string>
    <string name="menu_mis_familiares">Mis familiares</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_mis_pacientes">Mis pacientes</string>
    <string name="menu_notificacion">Enviar alerta (SOS)</string>


    <string name="ConfigTitle">Configuración</string>
    <string name="ConfigPortTitle">Puerto:</string>
    <string name="ConfigIntervalTitle">Intervalo:</string>
    <string name="ConfigPVS">Sensor de Pulso de volumen sanguíneo</string>
    <string name="ConfigECG">Sensor de Electrocardiograma</string>
    <string name="ConfigTemp">Sensor de Temperatura</string>
    <string name="ConfigEDA">Sensor de Actividad Electrodermal</string>
    <string name="ConfigOptions">Puerto, intervalos de medición</string>


    <string name="scan_activity_title">Dispositivos</string>
    <string name="main.hint.userName">Nombre</string>
    <string name="main.hint.email">Email</string>
    <string name="main.hint.provider">Provider</string>

    <!-- LOGIN -->
    <string name="register">REGISTRAR</string>
    <string name="login_email_hint">Mail</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="signup_login_hint">¿Ya tienes una cuenta? Accede</string>
    <string name="login_signup_hint">¿Aún no tienes una cuenta? Registrate</string>
    <string name="login_name_hint">Nombre</string>
    <string name="login_mobile_number_hint">Número telefónico</string>

</resources>