<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorBackground"
    tools:context=".MainActivityCuidadorPaciente">
    <include layout="@layout/custom_app_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <ImageView
            android:id="@+id/ivfotoperfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="7dp"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="MissingConstraints"
            android:src="@drawable/ic_awesome_user_circle">
        </ImageView>

        <TextView
            android:id="@+id/idnombreapellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre Apellido"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="240dp"
            tools:layout_editor_absoluteY="98dp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_top">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/temperatureCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewTopLeft"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:contentDescription="@string/contentDescriptionTemperature"
                    android:src="@drawable/ic_thermometer">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:gravity="center"
                    android:text="@string/MonitorTemperatureTitle"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/heartRateCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewTopRight"
            app:layout_columnWeight="2"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:contentDescription="@string/contentDescriptionHeartRate"
                    android:src="@drawable/ic_heart">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:gravity="center"
                    android:text="@string/MonitorHeartRateTitle"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bloodPressureCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewBottomLeft"
            app:layout_columnWeight="1"
            app:layout_rowWeight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescriptionBloodPressure"
                    android:src="@drawable/ic_blood_pressure"
                    android:layout_weight="0.3">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:gravity="center"
                    android:text="@string/MonitorBloodPressureTitle"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/stressLevelCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewBottomRight"
            app:layout_columnWeight="2"
            app:layout_rowWeight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:contentDescription="@string/contentDescriptionStressLevel"
                    android:src="@drawable/ic_stress">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:gravity="center"
                    android:text="@string/MonitorStressLevelTitle"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>


</LinearLayout>