<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.home.HomeFragment">

    <GridLayout
        android:layout_marginTop="24dp"
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/temperatureCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewTopLeft"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.30"
                    android:padding="8dp"
                    android:contentDescription="@string/contentDescriptionTemperature"
                    android:src="@drawable/ic_thermometer"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingVertical="6dp">
                    <ImageView
                        android:id="@+id/tempDisconnected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_power_off_24"/>
                    <TextView
                        android:id="@+id/tempTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/MonitorTemperatureTitle"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/heartRateCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewTopRight"
            app:layout_columnWeight="2"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:padding="8dp"
                    android:contentDescription="@string/contentDescriptionHeartRate"
                    android:src="@drawable/ic_heart"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingVertical="6dp">
                    <ImageView
                        android:id="@+id/hrDisconnected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_power_off_24"/>
                    <TextView
                        android:id="@+id/hrTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/MonitorHeartRateTitle"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bloodPressureCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewBottomLeft"
            app:layout_columnWeight="1"
            app:layout_rowWeight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="8dp"
                    android:contentDescription="@string/contentDescriptionBloodPressure"
                    android:src="@drawable/ic_blood_pressure"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingVertical="6dp">
                    <ImageView
                        android:id="@+id/bpDisconnected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_power_off_24"/>
                    <TextView
                        android:id="@+id/bpTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/MonitorBloodPressureTitle"
                        android:textColor="@color/colorPrimaryText"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/stressLevelCard"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorCard"
            android:theme="@style/MenuCardViewBottomRight"
            app:layout_columnWeight="2"
            app:layout_rowWeight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:padding="8dp"
                    android:contentDescription="@string/contentDescriptionStressLevel"
                    android:src="@drawable/ic_stress"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingVertical="6dp">
                    <ImageView
                        android:id="@+id/stressDisconnected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_power_off_24"/>
                    <TextView
                        android:id="@+id/stressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/MonitorStressLevelTitle"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <Button
            android:id="@+id/btnNotification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/colorDanger"
            android:padding="10dp"
            android:text="@string/menu_notificacion"
            android:textColor="@color/whiteTextColor"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>